k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mysql
spec:
  type: NodePort
  ports:
  - targetPort: 3306
    protocal: TCP
    port: 3306
    nodePort: 30006
  selector:
    app: mysql
    version: "5.7"
