k8s/mysql-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: mysql.tsmc.com
  labels:
    app: mysql
  name: mysql
  namespace: mysql

spec:
  rules:
  - host: mysql.tsmc.com
    http:
      paths:
      - backend:
          serviceName: mysql-service
          servicePort: 3306
        path: /
